k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: click-counter
  labels:
    name: click-counter
    environment: production
