k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: click-counter
  labels:
    app: click-counter
    component: web
spec:
  type: LoadBalancer
  selector:
    app: click-counter
    component: web
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
